--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animate_do: ^2.0.0
   iconsax: ^0.0.8
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
