--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   dio: ^4.0.4
   iconsax: ^0.0.8
   loading_indicator: ^3.0.2
-  device_preview: ^1.0.0
-  sizer: ^2.0.15
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
