--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^2.0.0
-  bloc: ^8.0.1
+  bloc: ^8.0.2
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0
+  flutter_bloc: ^8.0.1
   iconsax: ^0.0.8
   loading_indicator: ^3.0.2
+  fl_chart: ^0.40.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
