--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ dependencies:
   animate_do: ^2.0.0
   bloc: ^8.0.2
   cupertino_icons: ^1.0.2
+  device_preview: ^1.0.0
   dio: ^4.0.4
+  fl_chart: ^0.40.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
   iconsax: ^0.0.8
   loading_indicator: ^3.0.2
-  fl_chart: ^0.40.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
