add swap coin screen first part

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_svg: ^1.0.0
   iconsax: ^0.0.8
   loading_indicator: ^3.0.2
 
@@ -56,7 +57,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    # - assets/images
+    - assets/images/
     - assets/fonts/cairo/
     - assets/fonts/poppins/
 
@@ -90,5 +91,3 @@ flutter:
           weight: 500
         - asset: assets/fonts/poppins/Poppins-Regular.ttf
           weight: 400
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
