--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   flutter_svg: ^1.0.0
   iconsax: ^0.0.8
+  intro_slider: ^3.0.3
   loading_indicator: ^3.0.2
 
 dev_dependencies:
