--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   iconsax: ^0.0.8
   intro_slider: ^3.0.3
   loading_indicator: ^3.0.2
+  shared_preferences: ^2.0.12
 
 dev_dependencies:
   flutter_lints: ^1.0.0
